--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Sample Deployment</title>
+  <title>Sample</title>
   <style>
     body {
-      color: #ffffff;
+      color: #fffff;
       background-color: #007f3f;
       font-family: Arial, sans-serif;
       font-size: 14px;
